# WikiDBGraph

./: .gitattributes  .gitignore  CLAUDE.md  README.md  dummy_triplets.jsonl  manual_check.csv  nogil-requirements.txt  pyproject.toml  remove_duplicate.py  run_automated_fl_validation.sh  run_semantic_auto_fl_validation.sh
fig/: ablation_encoder_model.tex  ablation_serialization_mode.tex  detailed_pair_comparison.csv
fig/ablation_threshold/: threshold_ablation_results.txt
fl_data/: app.py  metrics_documentation.md  preprocessing_log.txt  preprocessing_summary.json
fl_data/00007_00013/: 00007_test.csv  00007_train.csv  00013_test.csv  00013_train.csv  config.json
fl_data/00007_00440/: 00007_test.csv  00007_train.csv  config.json
fl_data/00013_00440/: 00013_test.csv  00013_train.csv  00440_test.csv  00440_train.csv  config.json
fl_data/00015_00315/: 00015_test.csv  00015_train.csv  00315_test.csv  00315_train.csv  config.json
fl_data/00015_00409/: 00015_test.csv  00015_train.csv  00409_test.csv  00409_train.csv  config.json
fl_data/00015_00431/: 00431_test.csv  00431_train.csv  config.json
fl_data/00015_20497/: 00015_test.csv  00015_train.csv  20497_test.csv  20497_train.csv  (+1 more)
results/: graph_example.txt  subgraph_candidates_20260113_202548_schema_summary.txt
src.old/: 00_gen_schema_info.py  02_get_graph_qid.py  1_get_column_info.py  2_get_overlap_features.py  3_get_graph.py  4_keep_valid_pairs.py  5_get_matched_records.py  6.check_overlap_feature.py  analyze_runtime_old.py  analyze_similarity.py  analyze_similarity_old.py  cal_gender.py  check_dbs.py  compute_field_idf.py  create_negative_from_qid.py  get_dbs_similarity.py  normalize_idf.py  plot_time_test.py  summary_scale.py  test.py  test_result.py
tables/: combined_performance.tex  fl_improvement_summary.tex  performance_table.tex
(+7125 files in other folders)
